# dira

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml  release.yml
crates/domain/: Cargo.toml
crates/domain/src/: events.rs  lib.rs  metrics.rs  policy.rs  types.rs  world.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: benchmark.rs  main.rs  replay.rs  server.rs  sim.rs  store.rs
crates/simulator/: Cargo.toml
crates/simulator/src/: engine.rs  lib.rs  scenario.rs
crates/simulator/tests/: determinism.rs  properties.rs
docs/: architecture.md  demo-script.md  performance.md  protocol.md  test-plan.md
docs/adr/: 0001-determinism-rules.md  0002-operator-gate.md  0003-sqlite-event-log.md  0004-snapshots-before-deltas.md  0005-single-process-no-ros2.md
scenarios/: perimeter-baseline.toml  perimeter-incursion.toml  policy-conservative.toml
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/public/: demo-run.json
web/public/basemaps/: README.md
web/src/: App.tsx  styles.css
web/src/net/: demo.ts  socket.ts
web/src/panels/: HealthPanel.tsx  Legend.tsx  RecommendationsPanel.tsx  ReplayBar.tsx  SelectionPanel.tsx  TimelinePanel.tsx  TopBar.tsx  lib.ts
web/src/protocol/: types.ts
web/src/scene/: SceneManager.ts  SceneView.tsx
web/src/state/: store.ts
