[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/protocol",
    "crates/simulator",
    "crates/runtime",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Dnakitare/dira"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
rand = "0.8"
rand_chacha = "0.3"

[profile.release]
lto = "thin"
strip = true
