[package]
name = "dira-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "dira"
path = "src/main.rs"

[dependencies]
dira-domain = { path = "../domain" }
dira-protocol = { path = "../protocol" }
dira-simulator = { path = "../simulator" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs"] }
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
