[package]
name = "dira-simulator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dira-domain = { path = "../domain" }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
